# windows-pc-controller-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
config/: default.yaml
docs/plans/: 2026-03-03-dashboard-design.md  2026-03-03-dashboard-implementation-plan.md  2026-03-03-implementation-plan.md  2026-03-03-windows-pc-controller-mcp-design.md
src/: config.py  server.py
src/dashboard/: __init__.py  __main__.py
src/dashboard/static/: index.html
src/security/: audit.py  confirmation_popup.py  masking.py  middleware.py  permissions.py  rate_limiter.py
src/tools/: adb.py  clipboard.py  compound.py  gamepad.py  keyboard.py  mouse.py  screen.py  system.py  targeting.py
src/utils/: context.py  dpi.py  errors.py  image_utils.py  mouse_backend.py  params.py  uia_backend.py  win32_backend.py  win32_helpers.py
tests/: test_adb_tools.py  test_audit.py  test_clipboard_tools.py  test_compound_tools.py  test_config.py  test_confirmation_popup.py  test_context.py  test_dashboard.py  test_dpi.py  test_errors.py  test_gamepad_tools.py  test_keyboard_tools.py  test_masking.py  test_middleware.py  test_mouse_backend.py  test_mouse_tools.py  test_params.py  test_permissions.py  test_rate_limiter.py  test_screen_tools.py  test_server.py  test_system_tools.py  test_targeting_tools.py  test_uia_backend.py  test_win32_backend.py  test_win32_helpers.py
