[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-pc-controller-mcp"
version = "0.1.0"
description = "MCP server for Windows PC control — screen, input, gamepad, ADB"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "mss>=9.0.0",
    "easyocr>=1.7.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pynput>=1.7.0",
    "pywin32>=306",
    "vgamepad>=0.1.0",
    "adb-shell>=0.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "customtkinter>=5.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
windows-pc-controller-mcp = "src.server:main"
